Fix letter spacing

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ button:hover {
     animation: color-change 1s infinite;
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: black;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 @keyframes color-change {
@@ -83,7 +83,7 @@ button:hover {
     animation: color-correct 1s infinite;
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: black;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 @keyframes color-correct {
@@ -102,7 +102,7 @@ button:hover {
     animation: color-change 3s infinite;
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: black;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 @media only screen and (max-width: 545px) {
